--- a/api_rest/code/frontend/templates/crear_usuario.html
+++ b/api_rest/code/frontend/templates/crear_usuario.html
@@ -26,12 +26,12 @@
     <h1 class="text-success text-center">Registro de usuario</h1>
      
     <div class="container">
-        <form action="#" class="was-validated">
+        <form >
              
             <div class="form-group">
-                <label for="email">Email Id:</label>
+                <label for="email">Email:</label>
                 <input type="email" class="form-control" id="email"
-                    placeholder="Enter Email Id" name="email" required>
+                    placeholder="Ingresa tu email" name="email" required>
                 <div class="valid-feedback">Valid</div>
                 <div class="invalid-feedback">
                     Please fill this field
