--- a/api_rest/code/frontend/templates/login.html
+++ b/api_rest/code/frontend/templates/login.html
@@ -26,12 +26,12 @@
     <h1 class="text-success text-center">Inicio de sesión</h1>
      
     <div class="container">
-        <form action="#" class="was-validated">
+        <form id="login">
              
             <div class="form-group">
-                <label for="email">Email Id:</label>
+                <label for="email">Email:</label>
                 <input type="email" class="form-control" id="email"
-                    placeholder="Enter Email Id" name="email" required>
+                    placeholder="Ingresa tu Email" name="email" required>
                 <div class="valid-feedback">Valid</div>
                 <div class="invalid-feedback">
                     Please fill this field
@@ -49,7 +49,7 @@
                 </div>
             </div>
              
-            <button type="button" class="btn bg-success" onclick="login()">Submit</button>
+            <button type="button" class="btn bg-success" onclick="inicioSesion()">Log in</button>
         </form>
     </div>
     <script type="text/javascript" src="static/js/login.js"></script>
