--- a/api_rest/code/frontend/templates/bienvenida.html
+++ b/api_rest/code/frontend/templates/bienvenida.html
@@ -13,6 +13,12 @@
 <body>
     <body>
         <div class="container">
+        <div>
+                <a href='/post_cliente.html'>Agregar cliente</a><br>
+                <a href='/get_cliente.html?'>Ver cliente</a><br>
+                <a href='/put_cliente.html'>Actualizar cliente</a><br>
+                <a href='/delete_cliente.html'>Eliminar cliente</a><br>
+        </div>
          <div class="d-flex justify-content-center h-100">
              <div class="image_outer_container">
                 <h1 class="text-success text-center">Bienvenid@</h1>
@@ -21,7 +27,9 @@
                      <img src="https://i.pinimg.com/originals/43/96/61/439661dcc0d410d476d6d421b1812540.jpg">
                  </div>
              </div>
+        
          </div>
+         
      </div>
  </body>
  
